--- a/style.css
+++ b/style.css
@@ -15,11 +15,6 @@
      text-align: center;
      width: 150px;
 }
-#cmimi2{
-    color: red;
-    text-align: center;
-    width: 150px;
-}
 #Spotify{
     display: flex;
     align-items: center;
@@ -36,3 +31,32 @@
     height: 50px;
     width: 50px;
 }
+#Person1{
+    display: flex;
+    align-items: center;
+}
+#Person1logo{
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+}
+#Person2{
+    display: flex;
+    align-items: center;
+}
+#Person2logo{
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+}
+#Person3{
+    display: flex;
+    align-items: center;
+}
+#Person3logo{
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+}
+     
+
